packages/react/src/Prose/Prose.module.css
/* ---------------------------------------------------------- */
/* Prose component                                            */
/* ---------------------------------------------------------- */
/* Table of contents:                                         */
/* 1. Container                                               */
/* 2. Element spacing                                         */
/* 3. Line-length control                                     */
/* 4. Headings                                                */
/* 5. Paragraphs                                              */
/* 6. Lists                                                   */
/* 7. Inline elements                                         */
/* 8. Images                                                  */
/* 9. Block elements                                          */
/* ---------------------------------------------------------- */

/* ---------------------------------------------------------- */
/* 1. Container                                               */
/* ---------------------------------------------------------- */

.Prose {
  font-family: var(--brand-body-fontFamily);
  font-size: var(--brand-text-size-200);
  line-height: var(--brand-text-lineHeight-200);
  color: var(--brand-color-text-default);
}

.Prose--editorial {
  font-size: var(--brand-text-size-300);
  line-height: 1.7;
}

/* ---------------------------------------------------------- */
/* 2. Element spacing                                         */
/* ---------------------------------------------------------- */

.Prose * + * {
  margin-block-start: var(--spacing, 1em);
}

.Prose--editorial * + * {
  --spacing: var(--base-size-40);
}

/* ---------------------------------------------------------- */
/* 3. Line-length control                                     */
/* ---------------------------------------------------------- */

.Prose--lineLength {
  max-width: var(--brand-Prose-lineLength);
}

/* ---------------------------------------------------------- */
/* 4. Headings                                                */
/* ---------------------------------------------------------- */

.Prose h1 {
  font-weight: var(--brand-heading-weight-700);
  font-size: var(--brand-text-size-700);
  line-height: var(--brand-text-lineHeight-700);
  font-family: var(--brand-heading-fontFamily);
  letter-spacing: var(--brand-text-letterSpacing-700);
}

.Prose--lineLength h1 {
  max-width: 22ch;
}

.Prose h2 {
  font-weight: var(--brand-heading-weight-600);
  font-size: var(--brand-text-size-600);
  line-height: var(--brand-text-lineHeight-600);
  font-family: var(--brand-heading-fontFamily);
  letter-spacing: var(--brand-text-letterSpacing-600);
}

.Prose--lineLength h2 {
  max-width: 26ch;
}

.Prose h3 {
  font-weight: var(--brand-heading-weight-500);
  font-size: var(--brand-text-size-500);
  line-height: var(--brand-heading-lineHeight-500);
  font-family: var(--brand-heading-fontFamily);
  letter-spacing: var(--brand-heading-letterSpacing-500);
}

.Prose--lineLength h1 {
  max-width: 32ch;
}

.Prose h4 {
  --spacing: var(--base-size-48);
  font-weight: var(--brand-heading-weight-400);
  font-size: var(--brand-text-size-400);
  line-height: var(--brand-text-lineHeight-400);
  font-family: var(--brand-heading-fontFamily);
  letter-spacing: var(--brand-heading-letterSpacing-400);
}

.Prose h5 {
  --spacing: var(--base-size-48);
  font-weight: var(--brand-text-subhead-weight-large);
  font-size: var(--brand-text-subhead-size-large);
  line-height: var(--brand-text-subhead-lineHeight-large);
  font-family: var(--brand-heading-fontFamily);
  letter-spacing: var(--brand-heading-letterSpacing-300);
}

.Prose h6 {
  --spacing: var(--base-size-48);
  font-weight: var(--brand-text-subhead-weight-medium);
  font-size: var(--brand-text-subhead-size-medium);
  line-height: var(--brand-text-subhead-lineHeight-medium);
  font-family: var(--brand-heading-fontFamily);
  letter-spacing: var(--brand-heading-letterSpacing-200);
}

.Prose :is(h1, h2, h3) {
  --spacing: var(--base-size-64);
}

.Prose :is(h1, h2, h3) + * {
  --spacing: var(--base-size-24);
}

/* ---------------------------------------------------------- */
/* 5. Paragraphs                                              */
/* ---------------------------------------------------------- */

.Prose p {
  --spacing: var(--base-size-24);
}

.Prose--editorial p {
  --spacing: var(--base-size-40);
}

/* ---------------------------------------------------------- */
/* 6. Lists                                                   */
/* ---------------------------------------------------------- */

.Prose ul,
.Prose ol {
  --spacing: var(--base-size-16);
  display: flex;
  flex-direction: column;
  gap: var(--base-size-8);
  padding: 0;
  margin-inline-start: var(--base-size-24);
  line-height: var(--brand-text-lineHeight-300);
}

.Prose--editorial ul,
.Prose--editorial ol {
  --spacing: var(--base-size-48);
  gap: var(--base-size-16);
  line-height: 1.7;
}

.Prose ul {
  list-style-type: image;
  list-style-image: var(--brand-Prose-unorderedList-imageUrl);
}

.Prose li {
  --spacing: 0;
}

/* ---------------------------------------------------------- */
/* 7. Inline elements                                         */
/* ---------------------------------------------------------- */

.Prose strong {
  font-weight: var(--brand-text-weight-800);
}

.Prose em {
  font-variation-settings: 'ital' 10;
  font-synthesis: none;
}

.Prose a {
  color: var(--brand-InlineLink-color-rest);
  text-decoration: none;
  position: relative;
}

.Prose a:hover {
  text-decoration: none;
}

.Prose a::after {
  content: '';
  border-bottom: var(--brand-borderWidth-thin) solid var(--brand-InlineLink-color-rest);
  height: 0;
  transition: var(--brand-InlineLink-transition-timing) transform;
  transform: scaleY(var(--brand-InlineLink-transition-scale-start));
  transform-origin: 50% 100%;
  width: 100%;
  position: absolute;
  bottom: 0;
  left: 0;
}

.Prose a:hover::after {
  transform: scaleY(var(--brand-InlineLink-transition-scale-end));
}

.Prose a:active::after {
  border-color: var(--brand-InlineLink-color-pressed);
}

.Prose code {
  font-family: var(--brand-fontStack-monospace);
  font-size: var(--brand-text-size-100);
  white-space: break-spaces;
  padding: var(--base-size-4) var(--base-size-8);
  border-radius: var(--brand-borderRadius-small);
  background-color: var(--base-color-scale-indigo-0);
}

/* ---------------------------------------------------------- */
/* 8. Images                                                  */
/* ---------------------------------------------------------- */

.Prose img {
  --spacing: var(--brand-Prose-img-spacing);
  display: block;
  max-width: 100%;
  height: auto;
  margin-left: auto;
  margin-right: auto;
  margin-block-end: var(--spacing);
}

.Prose--editorial figure img {
  margin-block-end: 0;
  border-radius: var(--brand-borderRadius-medium);
  display: block;
}

/* ---------------------------------------------------------- */
/* 9. Block elements                                          */
/* ---------------------------------------------------------- */

.Prose blockquote {
  --spacing: var(--brand-Prose-blockquote-spacing);
  position: relative;
  font-size: var(--brand-text-size-400);
  line-height: var(--brand-text-lineHeight-400);
  padding-top: var(--base-size-48);
  padding-bottom: var(--base-size-8);
  margin-bottom: var(--spacing);
}

.Prose--default blockquote {
  padding-left: var(--base-size-40);
}

.Prose--editorial blockquote {
  font-size: var(--brand-text-size-500);
  line-height: var(--brand-text-lineHeight-500);
  font-weight: var(--brand-text-weight-500);
  padding-top: var(--base-size-64);
}

@media screen and (min-width: 90rem) {
  .Prose--editorial blockquote {
    margin-block: var(--base-size-40);
  }
}

.Prose blockquote::before {
  content: '“';
  font-size: var(--base-size-48);
  line-height: var(--base-size-64);
  font-weight: var(--base-text-weight-extrabold);
  position: absolute;
  top: 0;
}

.Prose--editorial blockquote::before {
  color: var(--brand-color-accent-primary);
  font-size: var(--base-size-64);
  line-height: var(--base-size-64);
}

.Prose--default blockquote::after {
  content: '';
  display: block;
  position: absolute;
  width: var(--brand-borderWidth-thick);
  height: 100%;
  top: 0;
  left: 0;
  background-color: var(--base-color-scale-indigo-5);
  background-image: linear-gradient(180deg, var(--base-color-scale-blue-5), var(--base-color-scale-purple-5));
}

.Prose figure figcaption {
  --spacing: var(--base-size-24);
  font-family: var(--brand-fontStack-monospace);
  font-size: var(--brand-text-size-100);
  line-height: var(--brand-text-lineHeight-100);
  color: var(--brand-color-text-muted);
}

.Prose--editorial figcaption {
  font-size: var(--brand-text-size-100);
  line-height: var(--brand-text-lineHeight-100);
  font-weight: var(--brand-text-weight-100);
}

.Prose--editorial hr {
  --spacing: var(--base-size-64);
  margin-block-start: var(--spacing);
  margin-block-end: var(--spacing);
  border: 1px solid var(--brand-color-border-muted);
}

